add_executable(BinaryTree
        BinaryTree/main.c
        BinaryTree/binaryTree.c
        BinaryTree/binaryTree.h
        BinaryTree/array_queue.c
        BinaryTree/array_queue.h
        BinaryTree/array_stack.c
        BinaryTree/array_stack.h)
add_executable(ThreadBTree
        ThreadBTree/main.c
        ThreadBTree/threadBTree.c
        ThreadBTree/threadBTree.h)
add_executable(BinarySearchTree BinarySearchTree/main.c BinarySearchTree/BinarySearchTree.c BinarySearchTree/BinarySearchTree.h)
add_executable(AVLTree AVLTree/main.c AVLTree/AVLTree.c AVLTree/AVLTree.h)
add_executable(UnionFindSet UnionFindSet/main.c UnionFindSet/quickFind.c UnionFindSet/quickFind.h)